--- a/blog.html
+++ b/blog.html
@@ -287,7 +287,7 @@
                 </div><div class="col-lg-4">
     <a href="how-to-store-susie-cake.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="how-to-store-susie-cake-424470.jpg?key=JkQyYi" class="img-fluid rounded" alt="How to store Susie cake?">
+            <img src="how-to-store-susie-cake-424470.jpg?key=ShzBz5" class="img-fluid rounded" alt="How to store Susie cake?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">How to store Susie cake?</h3>
@@ -318,7 +318,7 @@
 </div><div class="col-lg-4">
     <a href="how-do-i-ship-a-cake-to-another-state.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="how-do-i-ship-a-cake-to-another-state-424469.jpg?key=tMK6Iz" class="img-fluid rounded" alt="How do I ship a cake to another state?">
+            <img src="how-do-i-ship-a-cake-to-another-state-424469.jpg?key=kgn9tj" class="img-fluid rounded" alt="How do I ship a cake to another state?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">How do I ship a cake to another state?</h3>
@@ -349,7 +349,7 @@
 </div><div class="col-lg-4">
     <a href="where-do-the-kardashians-buy-their-cakes-from.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="where-do-the-kardashians-buy-their-cakes-from-424468.jpg?key=Zd2WGq" class="img-fluid rounded" alt="Where do the Kardashians buy their cakes from?">
+            <img src="where-do-the-kardashians-buy-their-cakes-from-424468.jpg?key=LsxhJr" class="img-fluid rounded" alt="Where do the Kardashians buy their cakes from?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">Where do the Kardashians buy their cakes from?</h3>
@@ -380,7 +380,7 @@
 </div><div class="col-lg-4">
     <a href="will-costco-customize-a-cake.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="will-costco-customize-a-cake-424461.jpg?key=I3lvSr" class="img-fluid rounded" alt="Will Costco customize a cake?">
+            <img src="will-costco-customize-a-cake-424461.jpg?key=Ok53PM" class="img-fluid rounded" alt="Will Costco customize a cake?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">Will Costco customize a cake?</h3>
@@ -411,7 +411,7 @@
 </div><div class="col-lg-4">
     <a href="is-there-an-app-to-design-cakes.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="is-there-an-app-to-design-cakes-424460.jpg?key=5fGPoG" class="img-fluid rounded" alt="Is there an app to design cakes?">
+            <img src="is-there-an-app-to-design-cakes-424460.jpg?key=9MNICn" class="img-fluid rounded" alt="Is there an app to design cakes?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">Is there an app to design cakes?</h3>
@@ -442,7 +442,7 @@
 </div><div class="col-lg-4">
     <a href="why-custom-cakes-are-so-expensive.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="why-custom-cakes-are-so-expensive-424459.jpg?key=jWdROp" class="img-fluid rounded" alt="Why custom cakes are so expensive?">
+            <img src="why-custom-cakes-are-so-expensive-424459.jpg?key=DHF08e" class="img-fluid rounded" alt="Why custom cakes are so expensive?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">Why custom cakes are so expensive?</h3>
