--- a/cake-delivery.html
+++ b/cake-delivery.html
@@ -307,7 +307,7 @@
         <div class="row g-4 section-content">
             <div class="container-md p-0 pt-sm-3 p-md-3 p-lg-5 position-relative">
     <div class=" top-100 start-50 w-100">
-        <img src="cake-delivery-424458.jpg?key=Lcg1ty" alt="Cake Delivery" class="rounded-4 w-100">
+        <img src="cake-delivery-424458.jpg?key=6ZMg6n" alt="Cake Delivery" class="rounded-4 w-100">
     </div>
 </div>
 <div class="col-12">
