--- a/custom-cake-design.html
+++ b/custom-cake-design.html
@@ -307,7 +307,7 @@
         <div class="row g-4 section-content">
             <div class="container-md p-0 pt-sm-3 p-md-3 p-lg-5 position-relative">
     <div class=" top-100 start-50 w-100">
-        <img src="custom-cake-design-424457.jpg?key=iyF7Ok" alt="Custom Cake Design" class="rounded-4 w-100">
+        <img src="custom-cake-design-424457.jpg?key=I35hgm" alt="Custom Cake Design" class="rounded-4 w-100">
     </div>
 </div>
 <div class="col-12">
