--- a/services.html
+++ b/services.html
@@ -286,7 +286,7 @@
                     <h2 class="main-heading fs-3">Services Offered By Manually Review/Customize Titles</h2>
                 </div><div class="col-lg-4">
     <div class="card h-100 gradient-card is-hoverable border-0">
-        <img src="cake-delivery-424458.jpg?key=SVbPGk" class="img-fluid rounded"
+        <img src="cake-delivery-424458.jpg?key=BPWiVl" class="img-fluid rounded"
              alt="Cake Delivery">
 
         <div class="card-body text-center">
@@ -306,7 +306,7 @@
     </div>
 </div><div class="col-lg-4">
     <div class="card h-100 gradient-card is-hoverable border-0">
-        <img src="custom-cake-design-424457.jpg?key=LpGkSF" class="img-fluid rounded"
+        <img src="custom-cake-design-424457.jpg?key=Ryl5Ih" class="img-fluid rounded"
              alt="Custom Cake Design">
 
         <div class="card-body text-center">
