--- a/where-do-the-kardashians-buy-their-cakes-from.html
+++ b/where-do-the-kardashians-buy-their-cakes-from.html
@@ -284,7 +284,7 @@
         <div class="row g-4 section-content">
             <div class="container-md p-0 pt-sm-3 p-md-3 p-lg-5 position-relative">
     <div class=" top-100 start-50 w-100">
-        <img src="where-do-the-kardashians-buy-their-cakes-from-424468.jpg?key=wZnf3q" alt="Where do the Kardashians buy their cakes from?" class="rounded-4 w-100">
+        <img src="where-do-the-kardashians-buy-their-cakes-from-424468.jpg?key=JHuWgs" alt="Where do the Kardashians buy their cakes from?" class="rounded-4 w-100">
     </div>
 </div>
 <div class="col-12">
@@ -344,7 +344,7 @@
                 <div class="card h-100 bg-section-dark">
                     <div class="card-body p-2 position-relative">
                         <div class="hstack gap-3 align-items-center">
-                            <img src="https://pub-817e745bae054e7a9d65afbddbf23489.r2.dev/Manually-Review_Cust-3085_OTAxMQ==/cake-delivery-424458.jpg?key=7ugrTU" alt="Cake Delivery" class="rounded"
+                            <img src="https://pub-817e745bae054e7a9d65afbddbf23489.r2.dev/Manually-Review_Cust-3085_OTAxMQ==/cake-delivery-424458.jpg?key=0IixHR" alt="Cake Delivery" class="rounded"
                                  width="80" height="80">
                             <a href="cake-delivery.html" class="h5 card-title mb-0 fw-semibold text-capitalize text-decoration-none stretched-link align-self-center">
                                 Cake Delivery
