--- a/aboutus.html
+++ b/aboutus.html
@@ -307,7 +307,7 @@ We are committed to using only the finest, locally sourced ingredients in our ca
 
 <div class="col-12 col-xl-6">
     <div class="card h-100 border-0 rounded-4 bg-transparent">
-        <img src="aboutus-424463.jpg?key=OuF3If" alt="About Us" class="rounded-4">
+        <img src="aboutus-424463.jpg?key=Ug8Y1v" alt="About Us" class="rounded-4">
     </div>
 </div>
 
