--- a/canada.html
+++ b/canada.html
@@ -284,7 +284,7 @@
         <div class="row g-4 section-content">
             <div class="container-md p-0 pt-sm-3 p-md-3 p-lg-5 position-relative">
     <div class=" top-100 start-50 w-100">
-        <img src="canada-424467.jpg?key=bVsi5p" alt="Canada" class="rounded-4 w-100">
+        <img src="canada-424467.jpg?key=9gY0RK" alt="Canada" class="rounded-4 w-100">
     </div>
 </div>
 <div class="col-12">
