--- a/how-do-i-ship-a-cake-to-another-state.html
+++ b/how-do-i-ship-a-cake-to-another-state.html
@@ -284,7 +284,7 @@
         <div class="row g-4 section-content">
             <div class="container-md p-0 pt-sm-3 p-md-3 p-lg-5 position-relative">
     <div class=" top-100 start-50 w-100">
-        <img src="how-do-i-ship-a-cake-to-another-state-424469.jpg?key=ufip8w" alt="How do I ship a cake to another state?" class="rounded-4 w-100">
+        <img src="how-do-i-ship-a-cake-to-another-state-424469.jpg?key=9fGsPL" alt="How do I ship a cake to another state?" class="rounded-4 w-100">
     </div>
 </div>
 <div class="col-12">
@@ -344,7 +344,7 @@
                 <div class="card h-100 bg-section-dark">
                     <div class="card-body p-2 position-relative">
                         <div class="hstack gap-3 align-items-center">
-                            <img src="https://pub-817e745bae054e7a9d65afbddbf23489.r2.dev/Manually-Review_Cust-3085_OTAxMQ==/where-do-the-kardashians-buy-their-cakes-from-424468.jpg?key=eXkFnN" alt="Where do the Kardashians buy their cakes from?" class="rounded"
+                            <img src="https://pub-817e745bae054e7a9d65afbddbf23489.r2.dev/Manually-Review_Cust-3085_OTAxMQ==/where-do-the-kardashians-buy-their-cakes-from-424468.jpg?key=FPQJPm" alt="Where do the Kardashians buy their cakes from?" class="rounded"
                                  width="80" height="80">
                             <a href="where-do-the-kardashians-buy-their-cakes-from.html" class="h5 card-title mb-0 fw-semibold text-capitalize text-decoration-none stretched-link align-self-center">
                                 Where do the Kardashians buy their cakes from?
