--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="mt-5">
             <div class="owl-carousel services-carousel">
                 <div class="card h-100 service-card gradient-card is-hoverable border-0">
-    <img src="cake-delivery-424458.jpg?key=34oTpj" class="img-fluid rounded"
+    <img src="cake-delivery-424458.jpg?key=b4Wice" class="img-fluid rounded"
          alt="Cake Delivery">
 
     <div class="card-body text-center">
@@ -320,7 +320,7 @@
         </div>
     </div>
 </div><div class="card h-100 service-card gradient-card is-hoverable border-0">
-    <img src="custom-cake-design-424457.jpg?key=6YY6mQ" class="img-fluid rounded"
+    <img src="custom-cake-design-424457.jpg?key=vUBsbF" class="img-fluid rounded"
          alt="Custom Cake Design">
 
     <div class="card-body text-center">
@@ -745,7 +745,7 @@ At Manually Review/Customize Titles, we understand that a cake is more than just
             <div class="col-lg-4">
     <a href="how-to-store-susie-cake.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="how-to-store-susie-cake-424470.jpg?key=JkQyYi" class="img-fluid rounded" alt="How to store Susie cake?">
+            <img src="how-to-store-susie-cake-424470.jpg?key=ShzBz5" class="img-fluid rounded" alt="How to store Susie cake?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">How to store Susie cake?</h3>
@@ -776,7 +776,7 @@ At Manually Review/Customize Titles, we understand that a cake is more than just
 </div><div class="col-lg-4">
     <a href="how-do-i-ship-a-cake-to-another-state.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="how-do-i-ship-a-cake-to-another-state-424469.jpg?key=tMK6Iz" class="img-fluid rounded" alt="How do I ship a cake to another state?">
+            <img src="how-do-i-ship-a-cake-to-another-state-424469.jpg?key=kgn9tj" class="img-fluid rounded" alt="How do I ship a cake to another state?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">How do I ship a cake to another state?</h3>
@@ -807,7 +807,7 @@ At Manually Review/Customize Titles, we understand that a cake is more than just
 </div><div class="col-lg-4">
     <a href="where-do-the-kardashians-buy-their-cakes-from.html" class="text-decoration-none">
         <div class="card h-100 gradient-card is-hoverable border-0">
-            <img src="where-do-the-kardashians-buy-their-cakes-from-424468.jpg?key=Zd2WGq" class="img-fluid rounded" alt="Where do the Kardashians buy their cakes from?">
+            <img src="where-do-the-kardashians-buy-their-cakes-from-424468.jpg?key=LsxhJr" class="img-fluid rounded" alt="Where do the Kardashians buy their cakes from?">
 
             <div class="card-body p-3 pb-0">
                 <h3 class="fs-5 mb-3 fw-semibold text-capitalize card-title">Where do the Kardashians buy their cakes from?</h3>
