--- a/is-there-an-app-to-design-cakes.html
+++ b/is-there-an-app-to-design-cakes.html
@@ -284,7 +284,7 @@
         <div class="row g-4 section-content">
             <div class="container-md p-0 pt-sm-3 p-md-3 p-lg-5 position-relative">
     <div class=" top-100 start-50 w-100">
-        <img src="is-there-an-app-to-design-cakes-424460.jpg?key=i52Gea" alt="Is there an app to design cakes?" class="rounded-4 w-100">
+        <img src="is-there-an-app-to-design-cakes-424460.jpg?key=LLVFwG" alt="Is there an app to design cakes?" class="rounded-4 w-100">
     </div>
 </div>
 <div class="col-12">
@@ -344,7 +344,7 @@
                 <div class="card h-100 bg-section-dark">
                     <div class="card-body p-2 position-relative">
                         <div class="hstack gap-3 align-items-center">
-                            <img src="https://pub-817e745bae054e7a9d65afbddbf23489.r2.dev/Manually-Review_Cust-3085_OTAxMQ==/why-custom-cakes-are-so-expensive-424459.jpg?key=HLHQ9r" alt="Why custom cakes are so expensive?" class="rounded"
+                            <img src="https://pub-817e745bae054e7a9d65afbddbf23489.r2.dev/Manually-Review_Cust-3085_OTAxMQ==/why-custom-cakes-are-so-expensive-424459.jpg?key=yXzrRh" alt="Why custom cakes are so expensive?" class="rounded"
                                  width="80" height="80">
                             <a href="why-custom-cakes-are-so-expensive.html" class="h5 card-title mb-0 fw-semibold text-capitalize text-decoration-none stretched-link align-self-center">
                                 Why custom cakes are so expensive?
