--- a/why-custom-cakes-are-so-expensive.html
+++ b/why-custom-cakes-are-so-expensive.html
@@ -284,7 +284,7 @@
         <div class="row g-4 section-content">
             <div class="container-md p-0 pt-sm-3 p-md-3 p-lg-5 position-relative">
     <div class=" top-100 start-50 w-100">
-        <img src="why-custom-cakes-are-so-expensive-424459.jpg?key=OTG2ba" alt="Why custom cakes are so expensive?" class="rounded-4 w-100">
+        <img src="why-custom-cakes-are-so-expensive-424459.jpg?key=xQk9jc" alt="Why custom cakes are so expensive?" class="rounded-4 w-100">
     </div>
 </div>
 <div class="col-12">
@@ -344,7 +344,7 @@
                 <div class="card h-100 bg-section-dark">
                     <div class="card-body p-2 position-relative">
                         <div class="hstack gap-3 align-items-center">
-                            <img src="https://pub-817e745bae054e7a9d65afbddbf23489.r2.dev/Manually-Review_Cust-3085_OTAxMQ==/custom-cake-design-424457.jpg?key=HfttyH" alt="Custom Cake Design" class="rounded"
+                            <img src="https://pub-817e745bae054e7a9d65afbddbf23489.r2.dev/Manually-Review_Cust-3085_OTAxMQ==/custom-cake-design-424457.jpg?key=SgmCLh" alt="Custom Cake Design" class="rounded"
                                  width="80" height="80">
                             <a href="custom-cake-design.html" class="h5 card-title mb-0 fw-semibold text-capitalize text-decoration-none stretched-link align-self-center">
                                 Custom Cake Design
